Removed blank stylesheets, Removed position fixed for sidebar on mobile devices

--- a/app/assets/stylesheets/misc.css.scss
+++ b/app/assets/stylesheets/misc.css.scss
@@ -14,3 +14,9 @@ table form {
     margin-bottom: 0;
   }
 }
+@media (max-width: 480px) {
+  .sidebar-nav {
+    position: static;
+  }
+}
+
